frontend/src/pages/About/about.css
@import url('https://fonts.googleapis.com/css2?family=Nunito&display=swap');

:root {
    --font-family-main: "Nunito", sans-serif;
    --color-main-dark-grey: #4C4C4C;
    --color-secondary-white: #FFFFFF;
    --color-tiertiary-light-grey: #DBDBDB;
}

* {
    padding: 0;
    margin: 0;
}

.about {
    display: flex;
    flex-direction: row;
    min-height: 100vh;
    padding-top: 6vh;
    padding-bottom: 6vh;
    padding-left: 6vw;
    padding-right: 6vw;    
    justify-content: space-between;
    gap: 8%;
}

.about-main {
    height: 85vh;
    display: flex;
    flex-flow: column;    
    font-family: var(--font-family-main);
    justify-content: center;
    gap: 2rem;
}

.about-main-button {
    margin-left: auto;
    margin-right: auto;
    padding-top: 2rem;
}

.about-main-title {
    font-size: 3.5rem;
}

.about-main-text {
    font-size: 1.5rem;    
}

.about-image {
    height: 85vh;
}

